[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
[patch.crates-io]
constant_time_eq = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/constant_time_eq-0.4.2" }
borsh = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/borsh-1.6.0" }
borsh-derive = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/borsh-derive-1.6.0" }
blake3 = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/blake3-1.8.3" }
wit-bindgen = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/wit-bindgen-0.51.0" }
toml_parser = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/toml_parser-1.0.9+spec-1.1.0" }
proc-macro-crate = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/proc-macro-crate-3.5.0" }
indexmap = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/indexmap-2.13.0" }
toml_datetime = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/toml_datetime-1.0.0+spec-1.1.0" }
toml_edit = { path = "C:/Users/arche/.cargo/registry/src/index.crates.io-6f17d22bba15001f/toml_edit-0.25.4+spec-1.1.0" }
